# implicitdict

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  test.yaml  test_publish.yaml
src/implicitdict/: __init__.py  jsonschema.py
tests/: conftest.py  test_containers.py  test_docpattern.py  test_inheritance.py  test_jsonschema.py  test_mutability.py  test_normal_usage.py  test_optional.py  test_properties.py  test_stacktrace.py  test_string_based_date_time.py  test_string_based_time_delta.py  test_types.py
